Weird static bind stuff to remove

--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="ConstantBuffers.h" />
     <ClInclude Include="CustomException.h" />
     <ClInclude Include="Drawable.h" />
+    <ClInclude Include="DrawableTemplated.h" />
     <ClInclude Include="dxerr.h" />
     <ClInclude Include="DxgiInfoManager.h" />
     <ClInclude Include="Graphics.h" />
