Imgui test window

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+[Ii]mgui/
+
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -390,3 +392,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 .idea/
 *.sln.iml
+*.cso
