--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -9,7 +9,12 @@ Size=550,680
 Collapsed=0
 
 [Window][Simulation Speed]
-Pos=60,60
+Pos=500,15
 Size=297,88
+Collapsed=0
+
+[Window][Camera]
+Pos=44,127
+Size=282,245
 Collapsed=0
 
