--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -14,7 +14,12 @@ Size=297,88
 Collapsed=0
 
 [Window][Camera]
-Pos=44,127
+Pos=7,19
 Size=282,245
+Collapsed=1
+
+[Window][Light]
+Pos=60,60
+Size=169,181
 Collapsed=0
 
