--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -192,13 +192,13 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Bindable.h" />
-    <ClInclude Include="BindableCodex.h" />
+    <ClInclude Include="BindableCodex_deprecated.h" />
     <ClInclude Include="BindableInclude.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ChiliUtil.h" />
     <ClInclude Include="Cone.h" />
-    <ClInclude Include="ConstantBuffers.h" />
+    <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="CustomException.h" />
     <ClInclude Include="Cylinder.h" />
@@ -225,6 +225,7 @@
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Melon.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="PixelConstantBuffer.h" />
     <ClInclude Include="PixelShader.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="PointLight.h" />
@@ -243,6 +244,7 @@
     <ClInclude Include="Topology.h" />
     <ClInclude Include="TransformCbuf.h" />
     <ClInclude Include="VertexBuffer.h" />
+    <ClInclude Include="VertexConstantBuffer.h" />
     <ClInclude Include="VertexShader.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WindowsInclude.h" />
