--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
@@ -64,6 +64,15 @@
     <Filter Include="Header Files\Bindable\Buffers">
       <UniqueIdentifier>{cce31131-58bd-4500-ab71-f046911385bb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\FBXImporter">
+      <UniqueIdentifier>{c77c837e-d2e8-4dab-a2f2-f2310fda3244}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\FBXImporter\Instances">
+      <UniqueIdentifier>{f718406e-88ea-4845-a89e-8e9a591b55e1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\VertexData">
+      <UniqueIdentifier>{47cdc64d-d4a1-4d88-9540-9dbd4d084d36}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -194,6 +203,9 @@
     </ClCompile>
     <ClCompile Include="Vertex.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModelInstance.cpp">
+      <Filter>Source Files\Drawable</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -380,8 +392,44 @@
     <ClInclude Include="Mesh.h">
       <Filter>Header Files\Drawable</Filter>
     </ClInclude>
+    <ClInclude Include="FBXImporter.h">
+      <Filter>Header Files\FBXImporter</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshAsset.h">
+      <Filter>Header Files\FBXImporter</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelAsset.h">
+      <Filter>Header Files\FBXImporter</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneGraph.h">
+      <Filter>Header Files\FBXImporter</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneGraphNode.h">
+      <Filter>Header Files\FBXImporter</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugHelper.h">
+      <Filter>Header Files\FBXImporter</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseMesh.h">
+      <Filter>Header Files\FBXImporter</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelInstanceUtil.h">
+      <Filter>Header Files\FBXImporter\Instances</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelInstance.h">
+      <Filter>Header Files\Drawable</Filter>
+    </ClInclude>
     <ClInclude Include="Vertex.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\VertexData</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexLayout.h">
+      <Filter>Header Files\VertexData</Filter>
+    </ClInclude>
+    <ClInclude Include="Colors.h">
+      <Filter>Header Files\VertexData</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexInclude.h">
+      <Filter>Header Files\VertexData</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
