--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="ChiliUtil.h" />
     <ClInclude Include="Cone.h" />
     <ClInclude Include="ConstantBuffer.h" />
+    <ClInclude Include="ConstVertex.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="CustomException.h" />
     <ClInclude Include="Cylinder.h" />
@@ -272,6 +273,7 @@
     <ClInclude Include="TransformCbuf.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="VertexBuffer.h" />
+    <ClInclude Include="VertexBufferData.h" />
     <ClInclude Include="VertexConstantBuffer.h" />
     <ClInclude Include="VertexInclude.h" />
     <ClInclude Include="VertexLayout.h" />
