--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
@@ -431,6 +431,12 @@
     <ClInclude Include="VertexInclude.h">
       <Filter>Header Files\VertexData</Filter>
     </ClInclude>
+    <ClInclude Include="ConstVertex.h">
+      <Filter>Header Files\VertexData</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexBufferData.h">
+      <Filter>Header Files\VertexData</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DX11Renderer.rc">
